Updated homework for week 2 and scratch notes

--- a/week2/homework/ac10281_hw2_q5to9.md
+++ b/week2/homework/ac10281_hw2_q5to9.md
@@ -27,7 +27,7 @@ $$
 $$
     \begin{array}{r|l|l}
         1. & \neg q & \text{Hypothesis} \\
-        2. & \neg q \lor \neq r & \text{Addition 1} \\
+        2. & \neg q \lor \neg r & \text{Addition 1} \\
         3. & \neg ( q \land r) & \text{De Morgans Law 2} \\
         4. & p \to (q \land r) & \text{Hypothesis} \\
         5. & \neg p& \text{Modus Tollens 3, 4} \\
@@ -36,18 +36,27 @@ $$
 
 #### E) 
 
+
 $$
 \begin{array}{rl}
     & \text{Argument} \\
     \hline
     & p \lor q \\
-    & \neg p \lor r \\
-    & \neg q \\
+    &  q \\
     \hline
     \therefore & r
 \end{array}
 $$
 
+$$
+    \begin{array}{r|l|l}
+        1. &p \lor q & \text{Hypothesis} \\
+        2. &q & \text{Hypothesis} \\
+        3. &p & \text{Disjunctive Syllogism 1, 2} \\
+        4. & & \text{Hypothesis} \\
+        5. &r & \text{Disjunctive Syllogism 3, 4} \\
+    \end{array}
+$$
 
 $$
     \begin{array}{r|l|l}
@@ -336,7 +345,8 @@ $$
             4. & A(Penelope) & \text{Hypothesis} \\
             5. & \neg (C(Penelope) \lor D(Penelope))& \text{Modus Tollens 3, 4} \\
             6. & \neg C(Penelope) \land \neg D(Penelope) & \text{De Morgans Law 5} \\
-            7. & \neg D(Penelope)& \text{Simplification 6} \\
+            7. & \neg D(Penelope) \land \neg D(Penelope) & \text{Commutative 6} \\
+            7. & \neg D(Penelope)& \text{Simplification 7} \\
         \end{array} \\
         \hline
     \end{array}
@@ -380,21 +390,21 @@ $\blacksquare$
 
 Prove each of the following statements using a direct proof.
 
-#### B) If $x$ is a real number and $x \geq 3$, then $12-7x+x^2 \geq 0$.
+#### B) If $x$ is a real number and $x \leq 3$, then $12-7x+x^2 \geq 0$.
 
-Let $x$ be a real number and $x \geq 3$. Since $x \geq 3$, we can show that $x-3 \geq 0$ 
+Let $x$ be a real number and $x \leq 3$. Since $x \leq 3$, we can show that $x-3 \leq 0$ 
 
-Since $x$ is a real number, then $12-7x+x^2$ is a real number. And since $x-3 \geq 0$, we can say that $12-7x+x^2 \geq x-3$
+Since $x$ is a real number, then $12-7x+x^2$ is a real number. And since $x-3 \leq 0$, we can say that $12-7x+x^2 \leq x-3$
 
 Thus:
 
 $$
 \begin{aligned}
-    12-7x+x^2&\geq x-3\\
-    (x-3)(x-4)&\geq x-3\\
-    x-4&\geq 1\\
-    x-3&\geq 0\\
-    x&\geq 3\\
+    12-7x+x^2&\leq x-3\\
+    (x-3)(x-4)&\leq x-3\\
+    x-4&\leq 1\\
+    x-3&\leq 0\\
+    x&\leq 3\\
     \blacksquare
 \end{aligned}
 $$
@@ -407,7 +417,7 @@ $$
 
 #### D) For every integer $n$, if $n^2 - 2n + 7$ is even, then $n$ is odd.
 
-
+Let n be an even integer. We will prove that $n^2 - 2n + 7$ is odd.
 
 ### 2.5.4: Proof by contrapositive of algebraic statements.
 
