Final draft for homework week 2

--- a/week2/homework/ac10281_hw2_q5to9.md
+++ b/week2/homework/ac10281_hw2_q5to9.md
@@ -6,7 +6,7 @@ toc: true
 \newpage
 ## Question 5:
 
-### 1.12.2
+### 1.12.2 Proving arguments are valid using rules of inference.
 
 Use the rules of inference and the laws of propositional logic to prove that each argument is valid. Number each line of your argument and label each line of your proof "Hypothesis" or with the name of the rule of inference used at that line. If a rule of inference is used, then include the numbers of the previous lines to which the rule is applied.
 
@@ -41,22 +41,14 @@ $$
 \begin{array}{rl}
     & \text{Argument} \\
     \hline
-    & p \lor q \\
-    &  q \\
+    & p \lor \\
+    & \neg p \lor  r \\
+    & \neg q \\
     \hline
     \therefore & r
 \end{array}
 $$
 
-$$
-    \begin{array}{r|l|l}
-        1. &p \lor q & \text{Hypothesis} \\
-        2. &q & \text{Hypothesis} \\
-        3. &p & \text{Disjunctive Syllogism 1, 2} \\
-        4. & & \text{Hypothesis} \\
-        5. &r & \text{Disjunctive Syllogism 3, 4} \\
-    \end{array}
-$$
 
 $$
     \begin{array}{r|l|l}
@@ -68,7 +60,7 @@ $$
     \end{array}
 $$
 
-### 1.12.3
+### 1.12.3: Proving the rules of inference using other rules.
 
 Some of the rules of inference can be proven using the other rules of inference and the laws of propositional logic.
 
@@ -78,8 +70,8 @@ $$
 \begin{array}{rl}
     & \text{Argument} \\
     \hline
-    & p \to q \\
-    & p \\
+    & p \lor q \\
+    & \neg p \\
     \hline
     \therefore & q
 \end{array}
@@ -89,17 +81,15 @@ Prove that Disjunctive syllogism is valid using the laws of propositional logic 
 
 $$
     \begin{array}{r|l|l}
-        1. & p \to q& \text{Hypothesis} \\
-        2. & \neg p \lor q& \text{Conditional Identity 1} \\
-        3. & q & \text{Hypothesis} \\
-        4. & q \lor \neg p& \text{Addition 3} \\
-        5. & \neg p \lor q& \text{Commutative Law 4} \\
-        6. & q \lor q & \text{Resolution 2, 5} \\
-        7. & q & \text{Idempotent Law 6} \\
+        1. & \neg p & \text{Hypothesis} \\
+        2. & \neg p \lor q & \text{Addition 1} \\
+        3. & p \lor q & \text{Hypothesis} \\
+        4. & q \lor q & \text{Resolution 2, 3} \\
+        5. & q & \text{Idempotent Law 4} \\
     \end{array}
 $$
 
-### 1.12.5
+### 1.12.5 Proving arguments in English are valid or invalid.
 
 Give the form of each argument. Then prove whether the argument is valid or invalid. For valid arguments, use the rules of inference to prove validity.
 
@@ -220,7 +210,7 @@ $$
     \end{array}
 $$
 
-### 1.13.3
+### 1.13.3: Show an argument with quantified statements is invalid.
 
 Show that the given argument is invalid by giving values for the predicates P and Q over the domain {a, b}.
 
@@ -250,7 +240,7 @@ We can see from the truth table that when $P(x)$ is false and $Q(x)$ is true, $\
 
 Therefore, this argument is __invalid__.
 
-### 1.13.5
+### 1.13.5: Determine and prove whether an argument in English is valid or invalid.
 
 Prove whether each argument is valid or invalid. First find the form of the argument by defining predicates and expressing the hypotheses and the conclusion using the predicates. If the argument is valid, then use the rules of inference to prove that the form is valid. If the argument is invalid, give values for the predicates you defined for a small domain that demonstrate the argument is invalid.
 
@@ -417,7 +407,22 @@ $$
 
 #### D) For every integer $n$, if $n^2 - 2n + 7$ is even, then $n$ is odd.
 
-Let n be an even integer. We will prove that $n^2 - 2n + 7$ is odd.
+Let $n$ be an even integer. We will prove that $n^2 - 2n + 7$ is odd.
+
+Since $n$ is an integer as well as an even number, we can say $n = 2k$, where $k$ is an integer and $k \neq 0$.
+
+Plug $n=2k$ into $n^2 - 2n + 7$:
+
+$$
+\begin{aligned}
+    n^2-2+7 &=(2k)^2-2(2k)+7 \\
+            &=2k^2-4k+7 \\
+            &=2k^2-4k+6+1 \\
+            &=2(k-2k+3)-1 \\
+\end{aligned}
+$$
+
+Since $k$ is an integer, $2(k-2k+3)-1$ is an integer as well, and since $n^2-2n+7$ can take the form of $2k + 1$, we can conclude that $n^2-2n+7$ is odd. $\blacksquare$
 
 ### 2.5.4: Proof by contrapositive of algebraic statements.
 
@@ -456,6 +461,7 @@ $$
 x - 10 &\leq 10 - y \\
 x + y & \leq 10 + 10 \\
 x + y & \leq 20 \\
+\blacksquare
 \end{aligned}
 $$
 
@@ -485,16 +491,67 @@ Since $x$ can be shown to be the quotient of two integers with a non-zero denomi
 
 ## Question 8:
 
-### 2.6.6
+### 2.6.6: Proofs by contradiction.
 
-#### C)
+#### C) The average of three real numbers is greater than or equal to at least one of the numbers.
 
-#### D)
+Let us assume that the average of three real numbers is less than all of the numbers.
+
+Since those three numbers are real, we can represent them as x, y, and z. The sum of all three numbers will be represented as $x+y+z$, and the average as $\frac{x+y+z}{3}=m$ where $m$ is a real number.
+
+Since $x, y, and z$ are all less than their average, we can say that $x<m$, $y<m$, and $z<m$.
+
+This however is impossible, as we have already established that $\frac{x+y+z}{3}=m$, which can also be stated as $x+y+z=3m$.
+
+Since we have established that $m=\frac{x+y+z}{3}$, it follows that $x+y+z<m$ is false, and therefore the average of three real numbers cannot be less all of the numbers.
+
+$\blacksquare$
+
+#### D) There is no smallest integer.
+
+Let us assume that there is a smallest integer, and we will call that integer $x$.
+
+Since $x$ is an integer, and $x=x$, when we subtract one from $x$ we would get $x<x-1$. Since $x-1$ will always be smaller than $x$, it follows that $x$ will no longer be the smallest number.
+
+Therefore, there is no smallest number. $\blacksquare$
 
 \newpage
 
 ## Question 9:
 
-### 2.7.2
+### 2.7.2: Proofs by cases - even/odd integers and divisibility
 
-#### B)
+Prove each statement.
+
+#### B) If integers $x$ and $y$ have the same parity, then $x+y$ is even.
+
+__Case 1: $x$ and $y$ are even.__
+
+Since $x$ and $y$ are integers and even, we can state that $x$ = $2k$ and $y$ = $2j$ where $k$ and $j$ are integers.
+
+We can plug these into $x+y$ to get:
+
+$$
+\begin{aligned}
+x+y &=2k+2j \\
+    &= 2(k+j)
+\end{aligned}
+$$
+
+Since $k$ and $j$ are integers, $2(k+j) is an integer and can be expressed as $x+y$. Therefore, $x+y$ is even.
+
+__Case 2: $x$ and $y$ are odd.__
+
+Since $x$ and $y$ are integers and odd, we can state that $x=2k+1$ and $y=2j+1$ where $k$ and $j$ are integers.
+
+We can plug these into $x+y$ to get:
+
+$$
+\begin{aligned}
+x+y &=2k+1+2j+1 \\
+    &=2k+2j+2 \\
+    &=2(k+j+1)
+\end{aligned}
+$$
+
+Since $k$ and $j$ are integers, $2(k+j+1) is an integer and can be expressed as $x+y$. Therefore, $x+y$ is even. $\blacksquare$
