Finished homework up to Question 9 for Week 3

--- a/week3/homework/cpp/ac10281_h3_q7to11.md
+++ b/week3/homework/cpp/ac10281_h3_q7to11.md
@@ -78,16 +78,28 @@ $\{x \isin \mathbb{N} : 0 \leq x \leq 1000 \text{ and x is a natural number and 
 Let $X = \{1, \{1\}, \{1, 2\}, 2, \{3\}, 4\}$. Which statements are true?
 
 #### A) $2 \isin X$ is __True__
-#### B) $\{2\} \subseteq X$
-#### C) $\{2\} \isin X$
-#### D) $3 \isin X$
-#### E) $\{1, 2\} \isin X$
-#### F) $\{1, 2\} \subseteq X$
-#### G) $\{2, 4\} \subseteq X$
-#### H) $\{2, 4\} \isin X$
-#### I) $\{2, 3\} \subseteq X$
-#### J) $\{2, 3\} \isin X$
-#### K) $\vert X \vert = 7$
+
+#### B) $\{2\} \subseteq X$ is __True__
+
+#### C) $\{2\} \isin X$ is __False__
+
+#### D) $3 \isin X$ is __False__
+
+#### E) $\{1, 2\} \isin X$ is __True__
+
+#### F) $\{1, 2\} \subseteq X$ is __True__
+
+#### G) $\{2, 4\} \subseteq X$ is __True__  (Note: can a set of two elements be in a set if that set isn't specified?)
+
+
+
+#### H) $\{2, 4\} \isin X$ is __False__
+
+#### I) $\{2, 3\} \subseteq X$ is __False__
+
+#### J) $\{2, 3\} \isin X$ __False__
+
+#### K) $\vert X \vert = 7$ __False__
 
 \newpage
 
@@ -97,27 +109,103 @@ Let $X = \{1, \{1\}, \{1, 2\}, 2, \{3\}, 4\}$. Which statements are true?
 
 #### B) Let $A=\{1, 2, 3\}$. What is $\{X \isin P(A): 2 \isin X\}$?
 
+This is stating that $X$ is the subsets of all sets in the $P(A)$ where $2$ is an element in that subset.
+
+In which case, the subsets would be $X=\{\{2\}, \{1, 2\}, \{2, 3\}, \{1, 2, 3\}\}$
+
 \newpage
 
 ## Question 9
 
-### 3.3.1:
+### 3.3.1: Unions and intersections of sets.
 
-#### C)
-#### D)
-#### E)
+Define the sets A, B, C, and D as follows:
 
-### 3.3.3:
+$
+\begin{aligned}
+    A &= \{-3, 0, 1, 4, 17\}\\
+    B &= \{-12, -5, 1, 4, 6\}\\
+    C &= \{x \isin \mathbb{Z}: \text{ x is odd}\}\\
+    D &= \{x \isin \mathbb{Z}: \text{ x is positive}\}\\
+\end{aligned}
+$
 
-#### A)
-#### B)
-#### E)
-#### F)
+#### C) $A \cap C$
 
-### 3.3.4:
+$
+A \cap C = \{-3, 1, 17\}
+$
 
-#### B)
-#### D)
+#### D) $A \cup ( B \cap C)$
+
+$
+A \cup ( B \cap C) = \{-5, -3 , 0, 1, 4, 17\}
+$
+
+#### E) $A \cap B \cap C$
+
+$
+A \cap B \cap C = \{1\}
+$
+
+### 3.3.3: Unions and intersections of sequences of sets, part 2
+
+Use the following definitions to express each union or intersection given. You can use roster or set builder notation in your responses, but no set operations. For each definition, $i \isin \mathbb{Z^+}$
+
+$
+\begin{aligned}
+    A_i &= \{i^0, i^1, i^2\}\\
+    B_i &= \{x \isin \mathbb{R}: -i \leq x \leq 1/i\}\\
+    C_i &= \{x \isin \mathbb{R}: -1/i \leq x \leq 1/i\}\\
+\end{aligned}
+$
+
+#### A) $\bigcap_{i=2}^{5}Ai$
+
+$$
+\begin{aligned}
+\bigcap_{i=2}^{5}Ai &= \{2^0, 2^1, 2^2\} \cap \{3^0, 3^1, 3^2\} \cap \{4^0, 4^1,4^2\} \cap \{5^0, 5^1, 5^2\} \\
+&= \{1\}
+\end{aligned}
+$$
+
+#### B) $\bigcup_{i=2}^{5}Ai$
+
+$$
+\begin{aligned}
+    \bigcup_{i=2}^{5}Ai &= \{2^0, 2^1, 2^2\} \cup \{3^0, 3^1, 3^2\} \cup \{4^0, 4^1,4^2\} \cup \{5^0, 5^1, 5^2\} \\
+    &= \{1, 2, 3, 4, 5, 9, 16, 25\}
+\end{aligned}
+$$
+
+#### E) $\bigcap_{i=1}^{100}Ci$
+
+$$
+\bigcap_{i=1}^{100}Ci = \{x \isin \mathbb{R}: -1/100 \leq x \leq 1/100\}
+$$
+
+#### F) $\bigcup_{i=1}^{100}Ci$
+
+$$
+\bigcup_{i=1}^{100}Ci = \{x \isin \mathbb{R}: -1 \leq x \leq 1\}
+$$
+
+### 3.3.4: Power sets and set operations.
+
+User the set definitions $A = \{a, b\}$ and $B = \{b, c\}$ to express each set below. Use roster notation in your solutions.
+
+#### B) $P(A \cup B)$
+
+$$
+P(A\cup B) = \{a, b, c, \{a, b\},\{b, c\}, \{a, c\}, \{a, b, c\}\}
+$$
+#### D) $P(A) \cap P(B)$
+
+$$
+P(A) = \{a, b, \{a, b\}\} \\
+P(B) = \{b, c, \{b, c\}\} \\
+P(A) \cap P(B) = \{b\}
+$$
 
 \newpage
 
