--- a/week3/homework/ac10281_h3_q7to11.md
+++ b/week3/homework/ac10281_h3_q7to11.md
@@ -11,22 +11,22 @@ toc: true
 
 Use the definitions for the sets given below to determine whether each statement is true or false:
 
-$
-A = \{x \isin \mathbb{Z}: x \text{ is an integer multiple of 3}\} \\
-B = \{x \isin \mathbb{Z}: x \text{ is a perfect square}\} \\
+$$
+A = \{x \in \mathbb{Z}: x \text{ is an integer multiple of 3}\} \\
+B = \{x \in \mathbb{Z}: x \text{ is a perfect square}\} \\
 C = \{4, 5, 9, 10\} \\
 D = \{2, 4, 11, 14\} \\
 E = \{3, 6, 9\} \\
 F = \{4, 6, 16\} \\
-$
+$$
 
 An integer $x$ is a perfect square if there is an integer $y$ such that $x = y^2$.
 
-#### A) $27 \isin A$ is __True__
+#### A) $27 \in A$ is __True__
 
-#### B) $27 \isin B$ is __False__
+#### B) $27 \in B$ is __False__
 
-#### C) $100 \isin B$ is __True__
+#### C) $100 \in B$ is __True__
 
 #### D) $E \subseteq C \text{ or } C \subseteq E$ is __False__
 
@@ -34,20 +34,20 @@ An integer $x$ is a perfect square if there is an integer $y$ such that $x = y^2
 
 #### F) $A \subset E$ is __False__
 
-#### G) $E \isin A$ __True__
+#### G) $E \in A$ __True__
 
 ### 3.1.2: Set membership and subsets - true or false, cont.
 
 Use the definitions for the sets given below to determine whether each statement is true or false:
 
-$
-A = \{x \isin \mathbb{Z}: x \text{ is an integer multiple of 3}\} \\
-B = \{x \isin \mathbb{Z}: x \text{ is a perfect square}\} \\
+$$
+A = \{x \in \mathbb{Z}: x \text{ is an integer multiple of 3}\} \\
+B = \{x \in \mathbb{Z}: x \text{ is a perfect square}\} \\
 C = \{4, 5, 9, 10\} \\
 D = \{2, 4, 11, 14\} \\
 E = \{3, 6, 9\} \\
 F = \{4, 6, 16\} \\
-$
+$$
 
 An integer $x$ is a perfect square if there is an integer $y$ such that $x = y^2$.
 
@@ -59,33 +59,33 @@ An integer $x$ is a perfect square if there is an integer $y$ such that $x = y^2
 
 #### D) $A \subseteq A$x __False__
 
-#### E) $\varnothing \isin B$ __False__
+#### E) $\varnothing \in B$ __False__
 
 ### 3.1.5: Expressing sets in set builder notation.
 
 Express each set using set builder notation. Then if the set is finite, give its cardinality. Otherwise, indicate that the set is infinite.
 
-### B) $\{3, 6, 9, 12, ...\}$
+#### B) $\{3, 6, 9, 12, ...\}$
 
-$\{x \isin \mathbb{N} : 0 < x \text{ and x is a natural number and a multiple of 3}\}$
+$\{x \in \mathbb{N} : 0 < x \text{ and x is a natural number and a multiple of 3}\}$
 
-### D) $\{0, 10, 20, 30, ..., 1000\}$
+#### D) $\{0, 10, 20, 30, ..., 1000\}$
 
-$\{x \isin \mathbb{N} : 0 \leq x \leq 1000 \text{ and x is a natural number and a multiple of 10}\}$
+$\{x \in \mathbb{N} : 0 \leq x \leq 1000 \text{ and x is a natural number and a multiple of 10}\}$
 
 ### 3.2.1: Sets of sets - true or false.
 
 Let $X = \{1, \{1\}, \{1, 2\}, 2, \{3\}, 4\}$. Which statements are true?
 
-#### A) $2 \isin X$ is __True__
+#### A) $2 \in X$ is __True__
 
 #### B) $\{2\} \subseteq X$ is __True__
 
-#### C) $\{2\} \isin X$ is __False__
+#### C) $\{2\} \in X$ is __False__
 
-#### D) $3 \isin X$ is __False__
+#### D) $3 \in X$ is __False__
 
-#### E) $\{1, 2\} \isin X$ is __True__
+#### E) $\{1, 2\} \in X$ is __True__
 
 #### F) $\{1, 2\} \subseteq X$ is __True__
 
@@ -93,11 +93,11 @@ Let $X = \{1, \{1\}, \{1, 2\}, 2, \{3\}, 4\}$. Which statements are true?
 
 
 
-#### H) $\{2, 4\} \isin X$ is __False__
+#### H) $\{2, 4\} \in X$ is __False__
 
 #### I) $\{2, 3\} \subseteq X$ is __False__
 
-#### J) $\{2, 3\} \isin X$ __False__
+#### J) $\{2, 3\} \in X$ __False__
 
 #### K) $\vert X \vert = 7$ __False__
 
@@ -107,7 +107,7 @@ Let $X = \{1, \{1\}, \{1, 2\}, 2, \{3\}, 4\}$. Which statements are true?
 
 ### 3.2.4: A subset of a power set.
 
-#### B) Let $A=\{1, 2, 3\}$. What is $\{X \isin P(A): 2 \isin X\}$?
+#### B) Let $A=\{1, 2, 3\}$. What is $\{X \in P(A): 2 \in X\}$?
 
 This is stating that $X$ is the subsets of all sets in the $P(A)$ where $2$ is an element in that subset.
 
@@ -121,44 +121,38 @@ In which case, the subsets would be $X=\{\{2\}, \{1, 2\}, \{2, 3\}, \{1, 2, 3\}\
 
 Define the sets A, B, C, and D as follows:
 
-$
+$$
 \begin{aligned}
     A &= \{-3, 0, 1, 4, 17\}\\
     B &= \{-12, -5, 1, 4, 6\}\\
-    C &= \{x \isin \mathbb{Z}: \text{ x is odd}\}\\
-    D &= \{x \isin \mathbb{Z}: \text{ x is positive}\}\\
+    C &= \{x \in \mathbb{Z}: \text{ x is odd}\}\\
+    D &= \{x \in \mathbb{Z}: \text{ x is positive}\}\\
 \end{aligned}
-$
+$$
 
 #### C) $A \cap C$
 
-$
-A \cap C = \{-3, 1, 17\}
-$
+$A \cap C = \{-3, 1, 17\}$
 
 #### D) $A \cup ( B \cap C)$
 
-$
-A \cup ( B \cap C) = \{-5, -3 , 0, 1, 4, 17\}
-$
+$A \cup ( B \cap C) = \{-5, -3 , 0, 1, 4, 17\}$
 
 #### E) $A \cap B \cap C$
 
-$
-A \cap B \cap C = \{1\}
-$
+$A \cap B \cap C = \{1\}$
 
 ### 3.3.3: Unions and intersections of sequences of sets, part 2
 
-Use the following definitions to express each union or intersection given. You can use roster or set builder notation in your responses, but no set operations. For each definition, $i \isin \mathbb{Z^+}$
+Use the following definitions to express each union or intersection given. You can use roster or set builder notation in your responses, but no set operations. For each definition, $i \in \mathbb{Z^+}$
 
-$
+$$
 \begin{aligned}
     A_i &= \{i^0, i^1, i^2\}\\
-    B_i &= \{x \isin \mathbb{R}: -i \leq x \leq 1/i\}\\
-    C_i &= \{x \isin \mathbb{R}: -1/i \leq x \leq 1/i\}\\
+    B_i &= \{x \in \mathbb{R}: -i \leq x \leq 1/i\}\\
+    C_i &= \{x \in \mathbb{R}: -1/i \leq x \leq 1/i\}\\
 \end{aligned}
-$
+$$
 
 #### A) $\bigcap_{i=2}^{5}Ai$
 
@@ -181,13 +175,13 @@ $$
 #### E) $\bigcap_{i=1}^{100}Ci$
 
 $$
-\bigcap_{i=1}^{100}Ci = \{x \isin \mathbb{R}: -1/100 \leq x \leq 1/100\}
+\bigcap_{i=1}^{100}Ci = \{x \in \mathbb{R}: -1/100 \leq x \leq 1/100\}
 $$
 
 #### F) $\bigcup_{i=1}^{100}Ci$
 
 $$
-\bigcup_{i=1}^{100}Ci = \{x \isin \mathbb{R}: -1 \leq x \leq 1\}
+\bigcup_{i=1}^{100}Ci = \{x \in \mathbb{R}: -1 \leq x \leq 1\}
 $$
 
 ### 3.3.4: Power sets and set operations.
@@ -197,41 +191,72 @@ User the set definitions $A = \{a, b\}$ and $B = \{b, c\}$ to express each set b
 #### B) $P(A \cup B)$
 
 $$
-P(A\cup B) = \{a, b, c, \{a, b\},\{b, c\}, \{a, c\}, \{a, b, c\}\}
+P(A\cup B) = \{\emptyset, a, b, c, \{a, b\},\{b, c\}, \{a, c\}, \{a, b, c\}\}
 $$
 #### D) $P(A) \cap P(B)$
 
 $$
-P(A) = \{a, b, \{a, b\}\} \\
-P(B) = \{b, c, \{b, c\}\} \\
-P(A) \cap P(B) = \{b\}
+P(A) = \{\emptyset, a, b, \{a, b\}\} \\
+P(B) = \{\emptyset, b, c, \{b, c\}\} \\
+P(A) \cap P(B) = \{\emptyset, b\}
 $$
 
 \newpage
 
 ## Question 10:
 
-### 3.5.1:
+### 3.5.1: Cartesian product of three small sets.
 
-#### B)
-#### C)
+The sets A, B, and C are defined as follows:
 
-### 3.5.3:
+$A = \{tall, grande, venti\} \\$
+$B = \{foam, no-foam\} \\$
+$C = \{non-fat, whole\}$
 
-#### B)
-#### C)
-#### E)
+Use the definitions of A, B, and C to answer the questions. Express the elements using n-tuple notation, not string notation.
 
-### 3.5.6:
+#### B) Write an element from the set $B \times A \times C$
 
-#### D)
-#### E)
+$\{foam, tall, non-fat\}$
 
-### 3.5.7:
+#### C) Write the set $B \times C$ using roster notation.
 
-#### C)
-#### F)
-#### G)
+$\{\{foam, non-fat\}, \{foam, whole\}, \{no-foam, non-fat\}, \{no-foam, whole\}\}$
+### 3.5.3: Cartesian prudct - true or false.
+
+Indicate which of the following statements are true.
+
+#### B) $\mathbb{Z^2} \subseteq \mathbb{R^2}$ is __True__
+
+#### C) $\mathbb{Z^2} \cup \mathbb{Z^3} = \emptyset$ is __False__
+
+
+#### E) For any two sets, A and B, if $A \subseteq B$ then $A^2 \subseteq B^2$ is __True__
+
+### 3.5.6: Roster notation for sets defined using set builder notation and the Cartesian product
+
+Express the following sets using the roster method. Express the elements as strings, not n-tuples.
+
+#### D) $\{xy: \text{where } x \in \{0\} \cup \{0\}^2 \text{ and } y \in \{1\} \cup \{1\}^2\}$
+
+$\{01, 011, 001, 0011\}$
+
+#### E) $\{xy: x \in \{aa, ab\} \text{ and } y \in \{a\} \cup \{a\}^2\}$
+
+$\{aaa, aba, aaaa, abaa\}$
+
+### 3.5.7: Cartesian products, power sets, and set operations.
+
+Use the following set definitions to specify each set in roster notation. Except where noted, express elements of Cartesian products as strings.
+
+- $A = \{a\}$
+- $B = \{b, c\}$
+- $C = \{a, b, d\}$
+#### C) $(A \times B) \cup (A \times C)$
+
+#### F) $P(A \times B)$
+
+#### G) $P(A) \times P(B).$ Use ordered pair notation for elements of the Cartesian product.
 
 \newpage
 
