Updates to homework and notes

--- a/week3/homework/ac10281_h3_q7to11.md
+++ b/week3/homework/ac10281_h3_q7to11.md
@@ -222,7 +222,7 @@ $\{foam, tall, non-fat\}$
 #### C) Write the set $B \times C$ using roster notation.
 
 $\{\{foam, non-fat\}, \{foam, whole\}, \{no-foam, non-fat\}, \{no-foam, whole\}\}$
-### 3.5.3: Cartesian prudct - true or false.
+### 3.5.3: Cartesian product - true or false.
 
 Indicate which of the following statements are true.
 
