Updated homework week 3

--- a/week3/homework/ac10281_h3_q7to11.md
+++ b/week3/homework/ac10281_h3_q7to11.md
@@ -262,9 +262,9 @@ Use the following set definitions to specify each set in roster notation. Except
 
 ## Question 11:
 
-### 3.6.2:
+### 3.6.2: Proving set identities.
 
-#### B)
+#### B) $(B \cup A) \cap (\overline B \cup A) = A$
 #### C)
 
 ### 3.6.3:
