Finished homework for week 3, updating cpp files

--- a/week3/homework/ac10281_h3_q7to11.md
+++ b/week3/homework/ac10281_h3_q7to11.md
@@ -11,14 +11,12 @@ toc: true
 
 Use the definitions for the sets given below to determine whether each statement is true or false:
 
-$$
-A = \{x \in \mathbb{Z}: x \text{ is an integer multiple of 3}\} \\
-B = \{x \in \mathbb{Z}: x \text{ is a perfect square}\} \\
-C = \{4, 5, 9, 10\} \\
-D = \{2, 4, 11, 14\} \\
-E = \{3, 6, 9\} \\
-F = \{4, 6, 16\} \\
-$$
+$A = \{x \in \mathbb{Z}: x \text{ is an integer multiple of 3}\} \\$
+$B = \{x \in \mathbb{Z}: x \text{ is a perfect square}\} \\$
+$C = \{4, 5, 9, 10\} \\$
+$D = \{2, 4, 11, 14\} \\$
+$E = \{3, 6, 9\} \\$
+$F = \{4, 6, 16\} $
 
 An integer $x$ is a perfect square if there is an integer $y$ such that $x = y^2$.
 
@@ -40,14 +38,12 @@ An integer $x$ is a perfect square if there is an integer $y$ such that $x = y^2
 
 Use the definitions for the sets given below to determine whether each statement is true or false:
 
-$$
-A = \{x \in \mathbb{Z}: x \text{ is an integer multiple of 3}\} \\
-B = \{x \in \mathbb{Z}: x \text{ is a perfect square}\} \\
-C = \{4, 5, 9, 10\} \\
-D = \{2, 4, 11, 14\} \\
-E = \{3, 6, 9\} \\
-F = \{4, 6, 16\} \\
-$$
+$A = \{x \in \mathbb{Z}: x \text{ is an integer multiple of 3}\} \\$
+$B = \{x \in \mathbb{Z}: x \text{ is a perfect square}\} \\$
+$C = \{4, 5, 9, 10\} \\$
+$D = \{2, 4, 11, 14\} \\$
+$E = \{3, 6, 9\} \\$
+$F = \{4, 6, 16\} \\$
 
 An integer $x$ is a perfect square if there is an integer $y$ such that $x = y^2$.
 
@@ -91,8 +87,6 @@ Let $X = \{1, \{1\}, \{1, 2\}, 2, \{3\}, 4\}$. Which statements are true?
 
 #### G) $\{2, 4\} \subseteq X$ is __True__  (Note: can a set of two elements be in a set if that set isn't specified?)
 
-
-
 #### H) $\{2, 4\} \in X$ is __False__
 
 #### I) $\{2, 3\} \subseteq X$ is __False__
@@ -103,7 +97,7 @@ Let $X = \{1, \{1\}, \{1, 2\}, 2, \{3\}, 4\}$. Which statements are true?
 
 \newpage
 
-## Question 8
+## Question 8:
 
 ### 3.2.4: A subset of a power set.
 
@@ -115,7 +109,7 @@ In which case, the subsets would be $X=\{\{2\}, \{1, 2\}, \{2, 3\}, \{1, 2, 3\}\
 
 \newpage
 
-## Question 9
+## Question 9:
 
 ### 3.3.1: Unions and intersections of sets.
 
@@ -231,7 +225,7 @@ Indicate which of the following statements are true.
 #### C) $\mathbb{Z^2} \cup \mathbb{Z^3} = \emptyset$ is __False__
 
 
-#### E) For any two sets, A and B, if $A \subseteq B$ then $A^2 \subseteq B^2$ is __True__
+#### E) For any three sets, A, B, and C, if $A \subseteq B$, then $A \times C \subseteq B \times C$
 
 ### 3.5.6: Roster notation for sets defined using set builder notation and the Cartesian product
 
@@ -254,9 +248,18 @@ Use the following set definitions to specify each set in roster notation. Except
 - $C = \{a, b, d\}$
 #### C) $(A \times B) \cup (A \times C)$
 
+
+$(A \times B) = \{ab, ac\}\\$
+$(A \times C) = \{aa, ab, ad\}\\$
+$(A \times B) \cup (A \times C) = \{aa, ab, ac, ad\}$
+
 #### F) $P(A \times B)$
 
+$P(A \times B) = \{\{ab\}, \{ac\}, \{ab, ac\}\}$
+
 #### G) $P(A) \times P(B).$ Use ordered pair notation for elements of the Cartesian product.
+
+$P(A) \times P(B) = \{ab, ac, abc\}$
 
 \newpage
 
@@ -264,17 +267,104 @@ Use the following set definitions to specify each set in roster notation. Except
 
 ### 3.6.2: Proving set identities.
 
+Use the set identities given in the table to prove the following new identities. Label each step in your proof with the set identity used to establish that step.
+
 #### B) $(B \cup A) \cap (\overline B \cup A) = A$
-#### C)
 
-### 3.6.3:
+$$
+    \begin{array}{|c|}
+        \hline
+        \text{Proof}\\
+        \hline
+        \begin{array}{r|c|r}
+            1. & (B \cup A) \cap (\overline{B} \cup A)\ & \text{} \\
+            2. & (A \cup B) \cap (A \cup \overline{B}) & \text{Commutative Law} \\
+            3. & A \cap (B \cup \overline{B})& \text{Distributive Law} \\
+            4. & A \cap \mathbb{U}& \text{Complement Law} \\
+            5. & A & \text{Identity Law} \\
+        \end{array} \\
+        \hline
+    \end{array}
+$$
 
-#### B)
-#### D)
+#### C) $\overline{A \cap \overline{B}} = \overline{A} \cup B$
 
-### 3.6.4:
+$$
+    \begin{array}{|c|}
+        \hline
+        \text{Proof}\\
+        \hline
+        \begin{array}{r|c|l}
+            1. & (\overline{A \cap \overline{B}})& \text{} \\
+            2. & \overline{A} \cup \overline{\overline{B}}& \text{DeMorgan's Law} \\
+            3. & \overline{A} \cup B & \text{Double Complement Law} \\
+        \end{array} \\
+        \hline
+    \end{array}
+$$
 
-#### B)
-#### C)
+### 3.6.3: Showing set equations that are not identities.
 
+A set equation is not an identity if there are examples for the variables denoting the sets that cause the equation to be false. For example $A \cup B = A \cap B$ is not an identity because if $A = \{1, 2\}$ and $B = \{1\}$, then $A \cup B = \{1, 2\}$ and $A \cap B = \{1\}$, which means that $A \cup B \neq A \cap B$.
 
+Show that each set equation given below is not a set identity.
+
+#### B) $A - (B \cap A) = A$
+
+Lets assume $A = \{1\}$ and $B = \{1\}$.
+
+$B \cap A = \{1\} \\$
+$A - (B \cap A) = \{\emptyset\} \\$
+
+Therefore $A - (B \cap A) \neq A$ and is not a set identity.
+
+#### D) $(B - A) \cup A = A$
+
+Lets assume $A = \{1\}$ and $B = \{2, 3\}$:
+
+$B - A = \{2, 3\}\\$
+$(B - A) \cup A = \{1, 2, 3\}$
+
+Therefore $(B - A) \cup A \neq A$ and is not a set identity.
+
+### 3.6.4: Proving set identities with the set difference operation.
+
+The set subtraction law states that $A - B = A \cap \overline{B}$. Use the set subtraction law as well as the other set identities given in the table to prove each of the following new identities. Label each step in your proof with the set identity used to establish that step.
+
+#### B) $A \cap (B - A) = \emptyset$
+
+$$
+    \begin{array}{|c|}
+        \hline
+        \text{Proof}\\
+        \hline
+        \begin{array}{r|l|l}
+            1. & A \cap (B - A) & \text{} \\
+            2. & A \cap (B \cap \overline{A})& \text{Set Subtraction Law} \\
+            3. & (A \cap B) \cap \overline{A}& \text{Associative Law} \\
+            4. & (B \cap A) \cap \overline{A}& \text{Commutative Law} \\
+            5. & B \cap (A \cap \overline{A})& \text{Associative Law} \\
+            6. & B \cap \emptyset& \text{Complement Law} \\
+            7. & \emptyset& \text{Domination Law} \\
+        \end{array} \\
+        \hline
+    \end{array}
+$$
+
+#### C) $A \cup (B - A) = A \cup B$
+
+$$
+    \begin{array}{|c|}
+        \hline
+        \text{Proof}\\
+        \hline
+        \begin{array}{r|c|l}
+            1. & A \cup (B - A)& \text{} \\
+            2. & A \cup (B \cap \overline{A})& \text{Set Subtraction Law} \\
+            3. & (A \cup B) \cap (A \cup \overline{A})& \text{Distributive Law} \\
+            4. & (A \cup B) \cap \mathbb{U}& \text{Complement Law} \\
+            5. & A \cup B & \text{Identity Law} \\
+        \end{array} \\
+        \hline
+    \end{array}
+$$
