Updated homework week 3

--- a/week3/homework/ac10281_h3_q7to11.md
+++ b/week3/homework/ac10281_h3_q7to11.md
@@ -225,7 +225,7 @@ Indicate which of the following statements are true.
 #### C) $\mathbb{Z^2} \cup \mathbb{Z^3} = \emptyset$ is __False__
 
 
-#### E) For any three sets, A, B, and C, if $A \subseteq B$, then $A \times C \subseteq B \times C$
+#### E) For any three sets, A, B, and C, if $A \subseteq B$, then $A \times C \subseteq B \times C$ is __True__
 
 ### 3.5.6: Roster notation for sets defined using set builder notation and the Cartesian product
 
