Updated HW3, added more explanation in math qs

--- a/week3/homework/ac10281_h3_q7to11.md
+++ b/week3/homework/ac10281_h3_q7to11.md
@@ -22,17 +22,33 @@ An integer $x$ is a perfect square if there is an integer $y$ such that $x = y^2
 
 #### A) $27 \in A$ is __True__
 
+$27/3 = 9, making 27 an integer multiple of 3, and therefore True.
+
 #### B) $27 \in B$ is __False__
+
+$5^2 = 25 and 6^2 = 36. Therefore, 27 is not a perfect square.
 
 #### C) $100 \in B$ is __True__
 
+$10^2 = 100, therefore making 100 a perfect square.
+
 #### D) $E \subseteq C \text{ or } C \subseteq E$ is __False__
+
+A subset request a set to contain all elements of another set.
+
+Set $C$ does not contain the element 3, and set $E$ does not contain the element 4, meaning $C$ nor $E$ can be subsets of the other.
 
 #### E) $E \subseteq A$ is __True__
 
+The elements 3, 6, 9 are all multiples of 3, therefore making them a subset of set $A$.
+
 #### F) $A \subset E$ is __False__
 
+$E$ only has 3 elements, while set $A$ includes all integers that are multiple of 3, thus making it impossible for $A$ to be a subset of $E$.
+
 #### G) $E \in A$ __True__
+
+
 
 ### 3.1.2: Set membership and subsets - true or false, cont.
 
@@ -49,11 +65,19 @@ An integer $x$ is a perfect square if there is an integer $y$ such that $x = y^2
 
 #### A) $15 \subset A$ is __False__
 
+An element cannot be a proper subset of a set.
+
 #### B) $\{15\} \subset A$ __True__
+
+Unlike the previous question, this is a set, which can be a proper set of a set, and is a proper subset of $A$.
 
 #### C) $\varnothing \subset A$ __True__
 
-#### D) $A \subseteq A$x __False__
+
+
+#### D) $A \subseteq A$ __False__
+
+
 
 #### E) $\varnothing \in B$ __False__
 
