Update homework for week 3, possibly last update

--- a/week3/homework/ac10281_h3_q7to11.md
+++ b/week3/homework/ac10281_h3_q7to11.md
@@ -2,6 +2,7 @@
 title: Homework - Week 2
 author: Adam Collado
 toc: true
+block-headings: true
 ---
 \newpage
 
@@ -15,22 +16,22 @@ $A = \{x \in \mathbb{Z}: x \text{ is an integer multiple of 3}\} \\$
 $B = \{x \in \mathbb{Z}: x \text{ is a perfect square}\} \\$
 $C = \{4, 5, 9, 10\} \\$
 $D = \{2, 4, 11, 14\} \\$
-$E = \{3, 6, 9\} \\$
-$F = \{4, 6, 16\} $
+$E = \{3, 6, 9\}\\$
+$F = \{4, 6, 16\}$
 
 An integer $x$ is a perfect square if there is an integer $y$ such that $x = y^2$.
 
 #### A) $27 \in A$ is __True__
 
-$27/3 = 9, making 27 an integer multiple of 3, and therefore True.
+$27/3 = 9$, making 27 an integer multiple of 3, and therefore True.
 
 #### B) $27 \in B$ is __False__
 
-$5^2 = 25 and 6^2 = 36. Therefore, 27 is not a perfect square.
+$5^2 = 25$ and $6^2 = 36$. Therefore, 27 is not a perfect square.
 
 #### C) $100 \in B$ is __True__
 
-$10^2 = 100, therefore making 100 a perfect square.
+$10^2 = 100$, therefore making 100 a perfect square.
 
 #### D) $E \subseteq C \text{ or } C \subseteq E$ is __False__
 
@@ -46,9 +47,9 @@ The elements 3, 6, 9 are all multiples of 3, therefore making them a subset of s
 
 $E$ only has 3 elements, while set $A$ includes all integers that are multiple of 3, thus making it impossible for $A$ to be a subset of $E$.
 
-#### G) $E \in A$ __True__
+#### G) $E \in A$ __False__
 
-
+Set $A$ will contain elements that are multiples of 3, whereas $E$ is a set that is not in Set $A$.
 
 ### 3.1.2: Set membership and subsets - true or false, cont.
 
@@ -73,13 +74,15 @@ Unlike the previous question, this is a set, which can be a proper set of a set,
 
 #### C) $\varnothing \subset A$ __True__
 
+All sets contain empty sets, therefore an empty set is a subset of $A$.
 
+#### D) $A \subseteq A$ __True__
 
-#### D) $A \subseteq A$ __False__
-
-
+Since set $A$ is equal to set $A$, and contains the same elements, then $A$ is a subset of $A$
 
 #### E) $\varnothing \in B$ __False__
+
+While an empty set is a subset of $B$, it is not an element of $B$, as an empty set is not an element.
 
 ### 3.1.5: Expressing sets in set builder notation.
 
@@ -89,9 +92,13 @@ Express each set using set builder notation. Then if the set is finite, give its
 
 $\{x \in \mathbb{N} : 0 < x \text{ and x is a natural number and a multiple of 3}\}$
 
+$\vert B \vert$ is infinite
+
 #### D) $\{0, 10, 20, 30, ..., 1000\}$
 
 $\{x \in \mathbb{N} : 0 \leq x \leq 1000 \text{ and x is a natural number and a multiple of 10}\}$
+
+$\vert D \vert$ = 100
 
 ### 3.2.1: Sets of sets - true or false.
 
@@ -109,7 +116,7 @@ Let $X = \{1, \{1\}, \{1, 2\}, 2, \{3\}, 4\}$. Which statements are true?
 
 #### F) $\{1, 2\} \subseteq X$ is __True__
 
-#### G) $\{2, 4\} \subseteq X$ is __True__  (Note: can a set of two elements be in a set if that set isn't specified?)
+#### G) $\{2, 4\} \subseteq X$ is __True__
 
 #### H) $\{2, 4\} \in X$ is __False__
 
@@ -211,12 +218,15 @@ User the set definitions $A = \{a, b\}$ and $B = \{b, c\}$ to express each set b
 $$
 P(A\cup B) = \{\emptyset, a, b, c, \{a, b\},\{b, c\}, \{a, c\}, \{a, b, c\}\}
 $$
-#### D) $P(A) \cap P(B)$
+
+#### D) $P(A) \cup P(B)$
 
 $$
-P(A) = \{\emptyset, a, b, \{a, b\}\} \\
-P(B) = \{\emptyset, b, c, \{b, c\}\} \\
-P(A) \cap P(B) = \{\emptyset, b\}
+\begin{aligned}
+P(A) &= \{\emptyset, a, b, \{a, b\}\} \\
+P(B) &= \{\emptyset, b, c, \{b, c\}\} \\
+P(A) \cup P(B) &= \{\emptyset, \{a\}, \{b\}, \{c\}, \{a, b\}, \{b, c\}\}
+\end{aligned}
 $$
 
 \newpage
@@ -240,13 +250,14 @@ $\{foam, tall, non-fat\}$
 #### C) Write the set $B \times C$ using roster notation.
 
 $\{\{foam, non-fat\}, \{foam, whole\}, \{no-foam, non-fat\}, \{no-foam, whole\}\}$
+
 ### 3.5.3: Cartesian product - true or false.
 
 Indicate which of the following statements are true.
 
-#### B) $\mathbb{Z^2} \subseteq \mathbb{R^2}$ is __True__
+#### B) $\mathbb{Z}^2 \subseteq \mathbb{R}^2$ is __True__
 
-#### C) $\mathbb{Z^2} \cup \mathbb{Z^3} = \emptyset$ is __False__
+#### C) $\mathbb{Z}^2 \cap \mathbb{Z}^3 = \emptyset$ is __True__
 
 
 #### E) For any three sets, A, B, and C, if $A \subseteq B$, then $A \times C \subseteq B \times C$ is __True__
@@ -270,6 +281,7 @@ Use the following set definitions to specify each set in roster notation. Except
 - $A = \{a\}$
 - $B = \{b, c\}$
 - $C = \{a, b, d\}$
+
 #### C) $(A \times B) \cup (A \times C)$
 
 
@@ -279,7 +291,7 @@ $(A \times B) \cup (A \times C) = \{aa, ab, ac, ad\}$
 
 #### F) $P(A \times B)$
 
-$P(A \times B) = \{\{ab\}, \{ac\}, \{ab, ac\}\}$
+$P(A \times B) = \{\emptyset, \{ab\}, \{ac\}, \{ab, ac\}\}$
 
 #### G) $P(A) \times P(B).$ Use ordered pair notation for elements of the Cartesian product.
 
@@ -301,7 +313,7 @@ $$
         \text{Proof}\\
         \hline
         \begin{array}{r|c|r}
-            1. & (B \cup A) \cap (\overline{B} \cup A)\ & \text{} \\
+            1. & (B \cup A) \cap (\overline{B} \cup A)\ & \text{Start} \\
             2. & (A \cup B) \cap (A \cup \overline{B}) & \text{Commutative Law} \\
             3. & A \cap (B \cup \overline{B})& \text{Distributive Law} \\
             4. & A \cap \mathbb{U}& \text{Complement Law} \\
@@ -319,7 +331,7 @@ $$
         \text{Proof}\\
         \hline
         \begin{array}{r|c|l}
-            1. & (\overline{A \cap \overline{B}})& \text{} \\
+            1. & (\overline{A \cap \overline{B}})& \text{Start} \\
             2. & \overline{A} \cup \overline{\overline{B}}& \text{DeMorgan's Law} \\
             3. & \overline{A} \cup B & \text{Double Complement Law} \\
         \end{array} \\
@@ -363,7 +375,7 @@ $$
         \text{Proof}\\
         \hline
         \begin{array}{r|l|l}
-            1. & A \cap (B - A) & \text{} \\
+            1. & A \cap (B - A) & \text{Start} \\
             2. & A \cap (B \cap \overline{A})& \text{Set Subtraction Law} \\
             3. & (A \cap B) \cap \overline{A}& \text{Associative Law} \\
             4. & (B \cap A) \cap \overline{A}& \text{Commutative Law} \\
@@ -383,7 +395,7 @@ $$
         \text{Proof}\\
         \hline
         \begin{array}{r|c|l}
-            1. & A \cup (B - A)& \text{} \\
+            1. & A \cup (B - A)& \text{Start} \\
             2. & A \cup (B \cap \overline{A})& \text{Set Subtraction Law} \\
             3. & (A \cup B) \cap (A \cup \overline{A})& \text{Distributive Law} \\
             4. & (A \cup B) \cap \mathbb{U}& \text{Complement Law} \\
