Updated homework 3 math questions

--- a/week3/homework/ac10281_h3_q7to11.md
+++ b/week3/homework/ac10281_h3_q7to11.md
@@ -98,7 +98,7 @@ $\vert B \vert$ is infinite
 
 $\{x \in \mathbb{N} : 0 \leq x \leq 1000 \text{ and x is a natural number and a multiple of 10}\}$
 
-$\vert D \vert$ = 100
+$\vert D \vert$ = 101
 
 ### 3.2.1: Sets of sets - true or false.
 
@@ -216,7 +216,7 @@ User the set definitions $A = \{a, b\}$ and $B = \{b, c\}$ to express each set b
 #### B) $P(A \cup B)$
 
 $$
-P(A\cup B) = \{\emptyset, a, b, c, \{a, b\},\{b, c\}, \{a, c\}, \{a, b, c\}\}
+P(A\cup B) = \{\emptyset, \{a\}, \{b\}, \{c\}, \{a, b\},\{b, c\}, \{a, c\}, \{a, b, c\}\}
 $$
 
 #### D) $P(A) \cup P(B)$
@@ -245,11 +245,11 @@ Use the definitions of A, B, and C to answer the questions. Express the elements
 
 #### B) Write an element from the set $B \times A \times C$
 
-$\{foam, tall, non-fat\}$
+$(foam, tall, non-fat)$
 
 #### C) Write the set $B \times C$ using roster notation.
 
-$\{\{foam, non-fat\}, \{foam, whole\}, \{no-foam, non-fat\}, \{no-foam, whole\}\}$
+$\{(foam, non-fat), (foam, whole\}, \{no-foam, non-fat\}, \{no-foam, whole\}\}$
 
 ### 3.5.3: Cartesian product - true or false.
 
@@ -295,7 +295,7 @@ $P(A \times B) = \{\emptyset, \{ab\}, \{ac\}, \{ab, ac\}\}$
 
 #### G) $P(A) \times P(B).$ Use ordered pair notation for elements of the Cartesian product.
 
-$P(A) \times P(B) = \{ab, ac, abc\}$
+$P(A) \times P(B) = \{(\emptyset, \emptyset), (\emptyset, \{b\}),(\emptyset, \{c\}, (\emptyset \{b, c\}), (\{a\}, \emptyset), (\{a\}, \{b\}), (\{a\}, \{c\}), (\{a\}, \{b, c\}) \}$
 
 \newpage
 
@@ -314,6 +314,7 @@ $$
         \hline
         \begin{array}{r|c|r}
             1. & (B \cup A) \cap (\overline{B} \cup A)\ & \text{Start} \\
+            2. & (A \cup B) \cap (\overline{B} \cup A) & \text{Commutative Law} \\
             2. & (A \cup B) \cap (A \cup \overline{B}) & \text{Commutative Law} \\
             3. & A \cap (B \cup \overline{B})& \text{Distributive Law} \\
             4. & A \cap \mathbb{U}& \text{Complement Law} \\
