Updated math homework for week 5

--- a/week5/homework/ac10281_hw5_q3to5.md
+++ b/week5/homework/ac10281_hw5_q3to5.md
@@ -32,8 +32,9 @@ $f: A \to \mathbb{Z} \text{ such that } f(x) = x^2$
 $\{4, 9, 16, 25\}$
 
 #### D)
+$f: \{0, 1\}^{5} \to \mathbb{Z}$.
 
-$f: \{0, 1\}^{5} \to \mathbb{Z}$ For $x \isin \{0, 1\}^{5}$, $f(x)$ is the number of 1's that occur in x. For example $f(01101) = 3$, because there are three 1's in the string '01101'.
+For $x \isin \{0, 1\}^{5}$, $f(x)$ is the number of 1's that occur in x. For example $f(01101) = 3$, because there are three 1's in the string '01101'.
 
 $\{0, 1, 2, 3, 4, 5\}$
 
@@ -70,21 +71,24 @@ This function is one-to-one.
 
 This function is NOT onto. The integer 4 can never be a result of $h(x)$ since $h(1) = 1$ and $h(2) = 8$.
 
-#### G)
+#### G) $f: \mathbb{Z} \times \mathbb{Z} \to \mathbb{Z} \times \mathbb{Z}$, $f(x, y) = (x+1, 2y)$
 
+#### K) $f: \mathbb{Z^{+}} \times \mathbb{Z^{+}} \to \mathbb{Z^{+}}$, $f(x, y) = 2^x + y$
 
+### 4.2.4 Properties of functions on strings and power sets
 
-#### K)
+For each of the functions below, indicate whether the function is onto, one-to-one, neither, or both. If the function is not onto or not one-to-one, give an example showing why.
 
-### 4.2.4
+#### B) $f: \{0, 1\}^3 \to \{0, 1\}^3$
+The output of f is obtained by taking the input string and replacing the first bit by 1, regardless of whether the first bit is a 0 or 1. For example, f(001) = 101 and f(110) = 110.
 
-#### B)
+#### C) $f: \{0, 1\}^3 \to \{0, 1\}^3$
+The output of f is obtained by taking the input string and reversing the bits. For example f(011) = 110.
 
-#### C)
+#### D) $F: \{0, 1\}^3 \to \{0, 1\}^4$
+The output of f is obtained by taking the input string and adding an extra copy of the first bit to the end of the string. For example, f(100) = 1001.
 
-#### D)
-
-#### G)
+#### G) Let A be defined to be the set $\{1, 2, 3, 4, 5, 6, 7, 8\}$ and let $B = \{1\}$. $f: P(A) \to P(A)$. For $X \subseteq A$, $f(X) = X - B$. Recall that for a finite set A, P(A) denotes the power set of A which is the set of all subsets of A.
 
 ### Give an example of a function from the set of integers to the set of positive integers that is:
 
