--- a/week5/homework/ac10281_hw5_q3to5.md
+++ b/week5/homework/ac10281_hw5_q3to5.md
@@ -29,35 +29,35 @@ Express the range of each function using roster notation.
 Let $A = \{2, 3, 4, 5\}$
 $f: A \to \mathbb{Z} \text{ such that } f(x) = x^2$
 
-$\{4, 9, 16, 25\}$
+__Solution:__ $\{4, 9, 16, 25\}$
 
 #### D)
 $f: \{0, 1\}^{5} \to \mathbb{Z}$.
 
-For $x \isin \{0, 1\}^{5}$, $f(x)$ is the number of 1's that occur in x. For example $f(01101) = 3$, because there are three 1's in the string '01101'.
+For $x \in \{0, 1\}^{5}$, $f(x)$ is the number of 1's that occur in x. For example $f(01101) = 3$, because there are three 1's in the string '01101'.
 
-$\{0, 1, 2, 3, 4, 5\}$
+__Solution:__ $\{0, 1, 2, 3, 4, 5\}$
 
 #### H)
 
 Let $A = \{1, 2, 3\}$
 $f: A \times A \to \mathbb{Z} \times \mathbb{Z}$ where $f(x, y) = (y, x)$
 
-$\{(1, 1), (1, 2), (1, 3), (2, 1), (2, 2), (2, 3), (3, 1), (3, 2), (3, 3)\}$
+__Solution:__ $\{(1, 1), (1, 2), (1, 3), (2, 1), (2, 2), (2, 3), (3, 1), (3, 2), (3, 3)\}$
 
 #### I)
 
 Let $A = \{1, 2, 3\}$
 $f: A \times A \to \mathbb{Z} \times \mathbb{Z}$ where $f(x, y) = (y, x+1)$
 
-$\{(1, 2), (1, 3), (1, 4), (2, 2), (2, 3), (2, 4), (3, 2), (3, 3), (3, 4)\}$
+__Solution:__ $\{(1, 2), (1, 3), (1, 4), (2, 2), (2, 3), (2, 4), (3, 2), (3, 3), (3, 4)\}$
 
 #### L)
 
 Let $A = \{1, 2, 3\}$
 $f: P(A) \to P(A).$ For $X \subseteq A, f(X) = X - \{1\}$
 
-$\{\emptyset, \{2\}, \{3\}, \{2, 3\}\}$
+__Solution:__ $\{\emptyset, \{2\}, \{3\}, \{2, 3\}\}$
 
 ## Question 4:
 
