Updated homework for week 5

--- a/week5/homework/ac10281_hw5_q3to5.md
+++ b/week5/homework/ac10281_hw5_q3to5.md
@@ -73,7 +73,15 @@ This function is NOT onto. The integer 4 can never be a result of $h(x)$ since $
 
 #### G) $f: \mathbb{Z} \times \mathbb{Z} \to \mathbb{Z} \times \mathbb{Z}$, $f(x, y) = (x+1, 2y)$
 
+This function is one-to-one.
+
+This function is NOT onto. While x+1 is onto, the expression $2y$ can never be 1 since $2(0) = 0$ and $2(1) = 2$.
+
 #### K) $f: \mathbb{Z^{+}} \times \mathbb{Z^{+}} \to \mathbb{Z^{+}}$, $f(x, y) = 2^x + y$
+
+This function is NOT one-to-one. $(1, 3)$ and $(2, 1)$ both map to the output 5.
+
+This function is NOT onto. The value 1, 2 can't be mapped in the target domain $\mathbb{Z^+}$ can't be mapped to by any value of $(x, y)$. This can be seen when you input the lowest values that be represented for $(x, y)$, that being $(1, 1)$. These values map to the value of 3.
 
 ### 4.2.4 Properties of functions on strings and power sets
 
@@ -82,13 +90,21 @@ For each of the functions below, indicate whether the function is onto, one-to-o
 #### B) $f: \{0, 1\}^3 \to \{0, 1\}^3$
 The output of f is obtained by taking the input string and replacing the first bit by 1, regardless of whether the first bit is a 0 or 1. For example, f(001) = 101 and f(110) = 110.
 
+__Solution:__ This function is neither one-to-one nor onto. Since the first bit of the input string is always replaced with 1, no elements in the \{0, 1\}^3 that start with a 0 can be mapped to, making this not onto. And since multiple values in the domain can be mapped to the same value in the target (for instance, $\{001\} = 101$ and $\{101\} = 101$), then this function can't be one-to-one.
+
 #### C) $f: \{0, 1\}^3 \to \{0, 1\}^3$
-The output of f is obtained by taking the input string and reversing the bits. For example f(011) = 110.
+The output of f is obtained by taking the input string and reversing the bits. For example $f(011) = 110$.
+
+__Solution:__ This function is both one-to-one and onto.
 
 #### D) $F: \{0, 1\}^3 \to \{0, 1\}^4$
 The output of f is obtained by taking the input string and adding an extra copy of the first bit to the end of the string. For example, f(100) = 1001.
 
-#### G) Let A be defined to be the set $\{1, 2, 3, 4, 5, 6, 7, 8\}$ and let $B = \{1\}$. $f: P(A) \to P(A)$. For $X \subseteq A$, $f(X) = X - B$. Recall that for a finite set A, P(A) denotes the power set of A which is the set of all subsets of A.
+__Solution:__ This function is one-to-one but NOT onto. Onto functions must have a domain that is greater than or equal to it's target, $\vert A \vert = \vert B \vert$. Since $\vert \{0, 1\}^3 \vert \neq \vert \{0, 1\}^4$, this function cannot be onto.
+
+#### G) 
+
+Let A be defined to be the set $\{1, 2, 3, 4, 5, 6, 7, 8\}$ and let $B = \{1\}$. $f: P(A) \to P(A)$. For $X \subseteq A$, $f(X) = X - B$. Recall that for a finite set A, P(A) denotes the power set of A which is the set of all subsets of A.
 
 ### Give an example of a function from the set of integers to the set of positive integers that is:
 
