Minor update to homework 5

--- a/week5/homework/ac10281_hw5_q3to5.md
+++ b/week5/homework/ac10281_hw5_q3to5.md
@@ -106,15 +106,19 @@ __Solution:__ This function is one-to-one but NOT onto. Onto functions must have
 
 Let A be defined to be the set $\{1, 2, 3, 4, 5, 6, 7, 8\}$ and let $B = \{1\}$. $f: P(A) \to P(A)$. For $X \subseteq A$, $f(X) = X - B$. Recall that for a finite set A, P(A) denotes the power set of A which is the set of all subsets of A.
 
+__Solution:__ 
+
 ### Give an example of a function from the set of integers to the set of positive integers that is:
 
 #### A) one-to-one, but not onto.
 
 #### A) onto, but not one-to-one.
+$f(x) = |x|$
 
 #### A) one-to-one, and onto.
 
 #### A) neither one-to-one nor onto.
+$f(x) = x^2$
 
 
 ## Question 5:
